--- a/dest/views/index.pug
+++ b/dest/views/index.pug
@@ -38,11 +38,8 @@ html(lang="ja")
       a#tweet.tweet.arrow(target="_blank")
         p ツイート
       a#count.count.arrow #{tweetCount}
-      a.hobo_stabook(href="https://7144.booth.pm/items/304792")
-      a.furoshiki(href="https://docs.google.com/forms/d/e/1FAIpQLScGnl4Z9GxWJkLYvN3nZmydaNmQG72G7kR7kIX2gyQBlD-f8A/viewform")
-        p ふろしき
-          br
-          | アンケート
+      a.furoshiki(href="https://rgx.booth.pm/")
+        p 風呂敷通販
       div#sort.mode
         label ならべかえ
         label#sortlabel.modelabel.off OFF
@@ -53,6 +50,7 @@ html(lang="ja")
       a.sta4koma(href="http://sta4koma.rgx6.com/")
         p 4コマまんが
       a.stabook(href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=50201705")
+      a.hobo_stabook(href="https://7144.booth.pm/items/304792")
       a.statshirt(href="https://startune.booth.pm/items/232555")
         p すたTシャツ
       a.statobashi(target="_blank", href="https://github.com/rgx6/StaTobashiDesktop/releases/download/v1.0.1/StaTobashi_v1.0.1.zip")
