--- a/src/css/style.css
+++ b/src/css/style.css
@@ -441,7 +441,7 @@ a.statshirt {
 }
 
 .sprite {
-    background-image: url(/images/stamp/stampspritesheet.png?d=20151204);
+    background-image: url(/images/stamp/stampspritesheet.png?d=20170506);
 }
 
 .sprite-stamp001 {
@@ -473,195 +473,195 @@ a.statshirt {
 }
 
 .sprite-stamp008 {
-    background-position: 0 -100px;
-}
-
-.sprite-stamp009 {
-    background-position: -100px -100px;
-}
-
-.sprite-stamp010 {
-    background-position: -200px -100px;
-}
-
-.sprite-stamp011 {
-    background-position: -300px -100px;
-}
-
-.sprite-stamp012 {
-    background-position: -400px -100px;
-}
-
-.sprite-stamp013 {
-    background-position: -500px -100px;
-}
-
-.sprite-stamp014 {
-    background-position: -600px -100px;
-}
-
-.sprite-stamp015 {
-    background-position: 0 -200px;
-}
-
-.sprite-stamp016 {
-    background-position: -100px -200px;
-}
-
-.sprite-stamp017 {
-    background-position: -200px -200px;
-}
-
-.sprite-stamp018 {
-    background-position: -300px -200px;
-}
-
-.sprite-stamp019 {
-    background-position: -400px -200px;
-}
-
-.sprite-stamp020 {
-    background-position: -500px -200px;
-}
-
-.sprite-stamp021 {
-    background-position: -600px -200px;
-}
-
-.sprite-stamp022 {
-    background-position: 0 -300px;
-}
-
-.sprite-stamp023 {
-    background-position: -100px -300px;
-}
-
-.sprite-stamp024 {
-    background-position: -200px -300px;
-}
-
-.sprite-stamp025 {
-    background-position: -300px -300px;
-}
-
-.sprite-stamp026 {
-    background-position: -400px -300px;
-}
-
-.sprite-stamp027 {
-    background-position: -500px -300px;
-}
-
-.sprite-stamp028 {
-    background-position: -600px -300px;
-}
-
-.sprite-stamp029 {
-    background-position: 0 -400px;
-}
-
-.sprite-stamp030 {
-    background-position: -100px -400px;
-}
-
-.sprite-stamp031 {
-    background-position: -200px -400px;
-}
-
-.sprite-stamp032 {
-    background-position: -300px -400px;
-}
-
-.sprite-stamp033 {
-    background-position: -400px -400px;
-}
-
-.sprite-stamp034 {
-    background-position: -500px -400px;
-}
-
-.sprite-stamp035 {
-    background-position: -600px -400px;
-}
-
-.sprite-stamp036 {
-    background-position: 0 -500px;
-}
-
-.sprite-stamp037 {
-    background-position: -100px -500px;
-}
-
-.sprite-stamp038 {
-    background-position: -200px -500px;
-}
-
-.sprite-stamp039 {
-    background-position: -300px -500px;
-}
-
-.sprite-stamp040 {
-    background-position: -400px -500px;
-}
-
-.sprite-stamp041 {
-    background-position: -500px -500px;
-}
-
-.sprite-stamp042 {
-    background-position: -600px -500px;
-}
-
-.sprite-stamp043 {
-    background-position: 0 -600px;
-}
-
-.sprite-stamp044 {
-    background-position: -100px -600px;
-}
-
-.sprite-stamp045 {
-    background-position: -200px -600px;
-}
-
-.sprite-stamp046 {
-    background-position: -300px -600px;
-}
-
-.sprite-stamp047 {
-    background-position: -400px -600px;
-}
-
-.sprite-stamp048 {
-    background-position: -500px -600px;
-}
-
-.sprite-stamp049 {
-    background-position: -600px -600px;
-}
-
-.sprite-stamp050 {
     background-position: -700px 0;
 }
 
-.sprite-stamp051 {
+.sprite-stamp009 {
+    background-position: 0 -100px;
+}
+
+.sprite-stamp010 {
+    background-position: -100px -100px;
+}
+
+.sprite-stamp011 {
+    background-position: -200px -100px;
+}
+
+.sprite-stamp012 {
+    background-position: -300px -100px;
+}
+
+.sprite-stamp013 {
+    background-position: -400px -100px;
+}
+
+.sprite-stamp014 {
+    background-position: -500px -100px;
+}
+
+.sprite-stamp015 {
+    background-position: -600px -100px;
+}
+
+.sprite-stamp016 {
     background-position: -700px -100px;
 }
 
-.sprite-stamp052 {
+.sprite-stamp017 {
+    background-position: 0 -200px;
+}
+
+.sprite-stamp018 {
+    background-position: -100px -200px;
+}
+
+.sprite-stamp019 {
+    background-position: -200px -200px;
+}
+
+.sprite-stamp020 {
+    background-position: -300px -200px;
+}
+
+.sprite-stamp021 {
+    background-position: -400px -200px;
+}
+
+.sprite-stamp022 {
+    background-position: -500px -200px;
+}
+
+.sprite-stamp023 {
+    background-position: -600px -200px;
+}
+
+.sprite-stamp024 {
     background-position: -700px -200px;
 }
 
-.sprite-stamp053 {
+.sprite-stamp025 {
+    background-position: 0 -300px;
+}
+
+.sprite-stamp026 {
+    background-position: -100px -300px;
+}
+
+.sprite-stamp027 {
+    background-position: -200px -300px;
+}
+
+.sprite-stamp028 {
+    background-position: -300px -300px;
+}
+
+.sprite-stamp029 {
+    background-position: -400px -300px;
+}
+
+.sprite-stamp030 {
+    background-position: -500px -300px;
+}
+
+.sprite-stamp031 {
+    background-position: -600px -300px;
+}
+
+.sprite-stamp032 {
     background-position: -700px -300px;
 }
 
-.sprite-stamp054 {
+.sprite-stamp033 {
+    background-position: 0 -400px;
+}
+
+.sprite-stamp034 {
+    background-position: -100px -400px;
+}
+
+.sprite-stamp035 {
+    background-position: -200px -400px;
+}
+
+.sprite-stamp036 {
+    background-position: -300px -400px;
+}
+
+.sprite-stamp037 {
+    background-position: -400px -400px;
+}
+
+.sprite-stamp038 {
+    background-position: -500px -400px;
+}
+
+.sprite-stamp039 {
+    background-position: -600px -400px;
+}
+
+.sprite-stamp040 {
     background-position: -700px -400px;
 }
 
-.sprite-stamp055 {
+.sprite-stamp041 {
+    background-position: 0 -500px;
+}
+
+.sprite-stamp042 {
+    background-position: -100px -500px;
+}
+
+.sprite-stamp043 {
+    background-position: -200px -500px;
+}
+
+.sprite-stamp044 {
+    background-position: -300px -500px;
+}
+
+.sprite-stamp045 {
+    background-position: -400px -500px;
+}
+
+.sprite-stamp046 {
+    background-position: -500px -500px;
+}
+
+.sprite-stamp047 {
+    background-position: -600px -500px;
+}
+
+.sprite-stamp048 {
     background-position: -700px -500px;
+}
+
+.sprite-stamp049 {
+    background-position: 0 -600px;
+}
+
+.sprite-stamp050 {
+    background-position: -100px -600px;
+}
+
+.sprite-stamp051 {
+    background-position: -200px -600px;
+}
+
+.sprite-stamp052 {
+    background-position: -300px -600px;
+}
+
+.sprite-stamp053 {
+    background-position: -400px -600px;
+}
+
+.sprite-stamp054 {
+    background-position: -500px -600px;
+}
+
+.sprite-stamp055 {
+    background-position: -600px -600px;
 }
 
 .sprite-stamp056 {
@@ -690,4 +690,24 @@ a.statshirt {
 
 .sprite-stamp062 {
     background-position: -500px -700px;
+}
+
+.sprite-stamp063 {
+    background-position: -600px -700px;
+}
+
+.sprite-stamp064 {
+    background-position: -700px -700px;
+}
+
+.sprite-stamp065 {
+    background-position: -800px 0;
+}
+
+.sprite-stamp066 {
+    background-position: -800px -100px;
+}
+
+.sprite-stamp067 {
+    background-position: -800px -200px;
 }
